--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 	<header id="section_home" class="main-header">
     <div class="container clearfix">
 		<h1 class="name"><a href="index.html">Brian Bozarth</a></h1>
-		<nav class="main-nav">
-			<li><a href="#section_home">Home</a></li>
-			<li><a href="#section_portfolio">Portfolio</a></li>
-			<li><a href="#section_contact">Contact</a></li>
-		</nav>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#section_home">Home</a></li>
+                <li><a href="#section_portfolio">Portfolio</a></li>
+                <li><a href="#section_skills">Skills</a></li>
+                <li><a href="#section_contact">Contact</a></li>
+            </ul>
+        </nav>
     </div>
 	</header><!--/.main-header-->   
 
@@ -36,39 +39,78 @@
           <h2 class="title">Portfolio</h2>
 
           <div class="portfoliogrid clearfix">
-              <div class="col">
-                  <img src="img/portfolio-1.png" />
-                  <h3>Marketing Page</h3>
+              <div class="col col1">
+                  <img src="img/portfolio-1.png" alt="Marketing Page" />
+                  <h3>Marketing Page 1</h3>
                   <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
               </div>
 
-              <div class="col">
-                  <img src="img/portfolio-2.png" />
-                  <h3>Search Page</h3>
+              <div class="col col2">
+                  <img src="img/portfolio-2.png" alt="Search Page" />
+                  <h3>Search Page 2</h3>
                   <p>This project searches through a specific database to find information that the user is trying to look up.</p>
               </div>
 
-              <div class="col">
-                  <img src="img/portfolio-3.png" />
-                  <h3>Travel App</h3>
+              <div class="col col3">
+                  <img src="img/portfolio-3.png" alt="Travel App" />
+                  <h3>Travel App 3</h3>
                   <p>This project compares travel times based on different transporation methods and tells you the best one.</p>
               </div>
 
-              <div class="col">
-                  <img src="img/portfolio-6.png" />
-                  <h3>Map of Favorite Spots</h3>
+              <div class="col col1">
+                  <img src="img/portfolio-6.png" alt="Map of Favorite Spots" />
+                  <h3>Map of Favorite Spots 4</h3>
                   <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
               </div>
 
-              <div class="col">
-                  <img src="img/portfolio-5.png" />
-                  <h3>Photo Gallery</h3>
+              <div class="col col2">
+                  <img src="img/portfolio-5.png" alt="Photo Gallery" />
+                  <h3>Photo Gallery 5</h3>
                   <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
               </div>
 
-              <div class="col">
-                  <img src="img/portfolio-4.png" />
-                  <h3>Calculator</h3>
+              <div class="col col3">
+                  <img src="img/portfolio-4.png" alt="Calculator" />
+                  <h3>Calculator 6</h3>
+
+                  <!-- <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p> -->
+
+                  <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+              </div>
+
+              <div class="col col1">
+                  <img src="img/portfolio-7.png" alt="Project 1" />
+                  <h3>Project 7</h3>
+                  <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+              </div>
+
+              <div class="col col2">
+                  <img src="img/portfolio-8.png" alt="Project 2" />
+                  <h3>Project 8</h3>
+                  <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+              </div>
+
+              <div class="col col3">
+                  <img src="img/portfolio-9.png" alt="Project 3" />
+                  <h3>Project 9</h3>
+                  <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+              </div>
+
+              <div class="col col1">
+                  <img src="img/portfolio-10.png" alt="Project 1" />
+                  <h3>Project 10</h3>
+                  <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+              </div>
+
+              <div class="col col2">
+                  <img src="img/portfolio-11.png" alt="Project 2" />
+                  <h3>Project 11</h3>
+                  <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+              </div>
+
+              <div class="col col3">
+                  <img src="img/portfolio-12.png" alt="Project 3" />
+                  <h3>Project 12</h3>
                   <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
               </div>
 
@@ -76,7 +118,21 @@
 
      </div>
 
-        <div id="section_contact" class="contact clearfix">
+    <div id="section_skills" class="contact clearfix">
+
+        <h2 class="title">Skills</h2>
+
+        <p>
+            HTML, CSS, Javascript, Jquery, GIT, Java, JSP, PHP, ASP.Net, Ruby on Rails
+        </p>
+
+        <p>
+           Adobe CQ, Ektron, EpiServer, Liferay, Sitecore, Umbraco, Wordpress, Business Catalyst
+        </p>
+
+    </div>
+
+       <div id="section_contact" class="contact clearfix">
 
            <h2 class="title">Contact</h2>
 
@@ -94,14 +150,19 @@
             <div class="container clearfix">
                 <h2 class="name"><a href="index.html">Brian Bozarth</a></h2>
                 <nav class="main-nav">
-                    <li><a href="#section_home">Home</a></li>
-                    <li><a href="#section_portfolio">Portfolio</a></li>
-                    <li><a href="#section_contact">Contact</a></li>
+                    <ul>
+                        <li><a href="#section_home">Home</a></li>
+                        <li><a href="#section_portfolio">Portfolio</a></li>
+                        <li><a href="#section_skills">Skills</a></li>
+                        <li><a href="#section_contact">Contact</a></li>
+                    </ul>
                 </nav>
 
                 <nav class="footer-nav mobile-only">
-                    <li><a href="#section_home">Back to Top</a></li>
-                 </nav>
+                    <ul>
+                        <li><a href="#section_home">Back to Top</a></li>
+                    </ul>
+                </nav>
             </div>
         </footer>
 
